<resources>
    <string name="app_name" translatable="false">ConversationalIST</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="login" translatable="false">Login</string>
    <string name="select_chatroom">Select Chatroom</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="create_chatroom">Create</string>
    <string name="create_chatroom_dialog_tittle">Create Chatroom</string>
    <string name="cancel">Cancel</string>
    <string name="chatroom_name">Name</string>
    <string name="chatroom_region">Region</string>
    <string name="sign_out">Sign Out</string>
    <string name="toggle_theme">Toggle Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent_image">Sent Image</string>
    <string name="received_image">Received Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="is_private">Private</string>
    <string name="search">Search</string>
    <string name="search_rooms">Search Rooms...</string>
    <string name="is_geofenced">Geofenced</string>
    <string name="radius">Radius</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading</string>
    <string name="is_not_private">Public</string>
    <string name="confirm_inputs">Confirm Inputs</string>
    <string name="something_went_wrong_with_log_in">Something wrong happened with the log in</string>
    <string name="error_sending_file">Error sending file</string>
    <string name="join_me_in">Join me in</string>
    <string name="error_occured_when_taking_picture">An error occurred when trying to take a picture</string>
    <string name="no_chatroom_available">No chatroom available</string>
    <string name="signing_out">Signing out</string>
    <string name="you_can_add_geofences">You can add geofences</string>
    <string name="no_permission_to_create_geofence">You dont have enough permissions to create a geofence</string>
    <string name="initial_pos">Initial Position</string>
    <string name="cant_access_room">Can\'t access room...</string>
    <string name="required_field">Required field</string>
    <string name="radius_required_when_geofencing_is_checked">Radius required when Geofencing is checked!</string>
    <string name="error_creating_chatroom">Error creating chatroom</string>
    <string name="successfully_signed_up">Successfully Signed Up</string>
    <string name="entered_geofence">Entered Geofence</string>
    <string name="geofence_exit">Geofence exit</string>
    <string name="leave_chatroom">Leave chatroom</string>
    <string name="share_chatroom">Share chatroom</string>
    <string name="share">Share</string>
</resources>