<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/create_new_account"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="80sp"
            android:background="@color/background_input"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="20sp"
            android:background="@color/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/create_new_account"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="8sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:color="?attr/colorOnSecondary"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/sign_in"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>